# claudia

./: .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CLAUDE_ABOUT.md  DASHBOARD_UX_PLAN.md  HOOKS_ANALYSIS_REPORT.md  README.md  clean_db.py  dev.py  docker-compose.yml
backend/: CLAUDE.md  hello.py  pyproject.toml
backend/app/: __init__.py  config.py  constants.py  exceptions.py  logging_config.py  main.py
backend/app/db/: database.py  models.py
backend/app/services/: __init__.py  embedding_service.py  file_monitor.py  search_service.py  session_tracker.py  settings_aggregator.py
database/: 01_conversation_capture.sql  02_vector_indexes.sql  03_add_session_source_reason_claudia_metadata.sql  init.sql
docker/: README.md
docs/: README.md
docs/architecture/: overview.md
docs/development/: setup.md
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: ActivityFeed.vue  ConversationView.vue  SessionDetailPanel.vue  SessionTabs.vue  SessionsPanel.vue  SettingsPanel.vue  ToolExecutionList.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: monitoring.ts
frontend/src/styles/: base.css  tokens.css
frontend/src/types/: index.ts
frontend/src/views/: Dashboard.vue  TerminalTest.vue
hooks/: CLAUDE.md  README.md  capture_assistant_messages.py  capture_prompts.py  capture_session.py  hook_types.py  install_hooks.py  monitor_tool_use.py  settings_watcher.py
reference/claude-code/claude-code-docs/: CLAUDE.md
(+6 files in other folders)
